<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_cad_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Botão Voltar -->
    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/voltar_button"
        android:src="@android:drawable/ic_media_previous" />

    <!-- Título -->
    <TextView
        android:id="@+id/textViewTitle"
        style="@style/TitlePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/title_cad_perfil" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_left"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/white_boy" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_right"
            android:background="@android:color/transparent"/>
    </LinearLayout>


    <!-- Campo Email -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="50sp"
        android:layout_marginStart="44sp"
        android:layout_marginEnd="44sp"
        android:paddingStart="12sp"
        />
    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditTextDefault"
        android:background="@drawable/edit_text_no_underline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <!-- Campo Senha -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_name"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginStart="44sp"
        android:layout_marginEnd="44sp"
        android:paddingStart="12sp"
        />
    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextDefault"
        android:background="@drawable/edit_text_no_underline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="12dp"
        />

    <!-- Botão Confirmar -->
    <Button
        android:id="@+id/buttonConfirm"
        style="@style/ButtonDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#A875F8"
        android:padding="12dp"
        android:text="confirmar"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>